--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       </table>
 <hr>
-      <a href="Contact_info.html">Contact Me</a>
+      <a href="contact_info.html">Contact Me</a>
   </body>
 
 </html>
